# augustus

./: .gitignore  CMakeLists.txt  README.md
include/: structs.hpp
src/: main.cpp
